--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -7,7 +7,9 @@
     <uses-sdk
         android:minSdkVersion="15"
         android:targetSdkVersion="16" />
-
+    
+	<uses-permission android:name="android.permission.VIBRATE"/>
+	
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
@@ -23,6 +25,7 @@
         <activity
             android:name="com.example.actrecognition.MainActivity"
             android:label="@string/app_name" >
+            
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
