--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -9,7 +9,7 @@
         android:targetSdkVersion="16" />
     
 	<uses-permission android:name="android.permission.VIBRATE"/>
-	
+	<uses-permission android:name="android.permission.INTERNET"/>
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
@@ -23,7 +23,7 @@
         </receiver>
 
         <activity
-            android:name="com.example.actrecognition.MainActivity"
+            android:name="com.severyn.actrecognition.MainActivity"
             android:label="@string/app_name" >
             
             <intent-filter>
