--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -7,14 +7,20 @@
     <uses-sdk
         android:minSdkVersion="15"
         android:targetSdkVersion="16" />
-    
-	<uses-permission android:name="android.permission.VIBRATE"/>
-	<uses-permission android:name="android.permission.INTERNET"/>
+
+    <uses-permission android:name="android.permission.ACCESS_GPS" />
+    <uses-permission android:name="android.permission.ACCESS_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.VIBRATE" />
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
+
         <!-- Broadcast Receivers -->
         <receiver android:name="net.work.box.controller.receivers.RemoteControlReceiver" >
             <intent-filter android:priority="1000000000000000" >
@@ -25,7 +31,6 @@
         <activity
             android:name="com.severyn.actrecognition.MainActivity"
             android:label="@string/app_name" >
-            
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
